--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -30,6 +30,10 @@ idna==3.3
     #   rfc3986
 rfc3986[idna2008]==1.5.0
     # via httpx
+ruamel-yaml==0.17.21
+    # via -r requirements.in
+ruamel-yaml-clib==0.2.6
+    # via ruamel-yaml
 sniffio==1.2.0
     # via
     #   anyio
