--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -16,8 +16,8 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        # 10 partitions of 100 for the first 1000 cards
-        partition: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+        # 5 partitions of 200 for the first 1000 cards
+        partition: [0, 1, 2, 3, 4]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,12 +27,13 @@ jobs:
           cache: pip
       - run: pip install -r src/requirements.txt
       - run: curl -fsSLO https://github.com/mycard/ygopro-database/raw/${{ github.event.inputs.revision }}/locales/zh-CN/cards.cdb
-      - run: python3 src/job.py cards.cdb 100 ${{ matrix.partition }} zh-CN
+      - run: python3 src/job.py cards.cdb 200 ${{ matrix.partition }} zh-CN
       - name: Commit
         if: ${{ always() }}
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name GitHub Actions
+          git config user.email noreply@github.com
           git add .
-          git commit -m "Scrape partition ${{ matrix.partition }}, size 100, ${{ github.event.inputs.revision }}"
+          git commit -m "Scrape partition ${{ matrix.partition }}, size 200, ${{ github.event.inputs.revision }}"
+          git pull --rebase
           git push
