--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -17,7 +17,7 @@ jobs:
       max-parallel: 1
       matrix:
         # 5 partitions of 200 for the first 1000 cards
-        partition: [0, 1, 2, 3, 4]
+        partition: [0, 2, 3, 4]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
