--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -16,8 +16,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        # 4 partitions of 3000 to cover the other half of the card pool that was missed
-        partition: [0, 1, 2, 3]
+        partition: [0]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,13 +26,13 @@ jobs:
           cache: pip
       - run: pip install -r src/requirements.txt
       - run: curl -fsSLO https://github.com/mycard/ygopro-database/raw/${{ github.event.inputs.revision }}/locales/zh-CN/cards.cdb
-      - run: python3 src/job.py cards.cdb 3000 ${{ matrix.partition }} zh-CN
+      - run: python3 src/job.py cards.cdb 400 ${{ matrix.partition }} zh-CN
       - name: Commit
         if: ${{ always() }}
         run: |
           git config user.name GitHub Actions
           git config user.email noreply@github.com
           git add .
-          git commit -m "Scrape partition ${{ matrix.partition }}, size 3000, ${{ github.event.inputs.revision }}"
+          git commit -m "Scrape partition ${{ matrix.partition }}, size 400 (Pendulum), ${{ github.event.inputs.revision }}"
           git pull --rebase
           git push
