--- a/zh-CN/31991800.yaml
+++ b/zh-CN/31991800.yaml
@@ -1,5 +1,4 @@
 name: 威风妖怪·狸
 text: |-
   「威风妖怪·狸」的①的怪兽效果1回合只能使用1次。①：这张卡召唤·特殊召唤成功时才能发动。从卡组把1只「威风妖怪」怪兽加入手卡。②：这张卡只要在怪兽区域存在，不会成为对方的效果的对象，不会被对方的效果破坏。
-pendulum: |-
-  无
+pendulum:
