Scrape partition 0, size 1000 (validation),

--- a/zh-CN/64612053.yaml
+++ b/zh-CN/64612053.yaml
@@ -1,3 +1,5 @@
-name: 救援王牌 空中灭火机
+name: 救援ACE队 空中灭火机
 text: |-
-  这个卡名的②效果1回合只能使用1次。①：自己场上有「R－ACEファイア・アタッカー／救援王牌 空中灭火机」以外的「R－ACE／救援王牌」怪兽召唤或特殊召唤的场合可以发动。将这张卡从手牌特殊召唤。②：因抽卡以外的方法对手的手牌有卡加入的场合可以发动。自己从卡组抽2张，那之后选1张手牌舍弃。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：自己场上有「救援ACE队 空中灭火机」以外的「救援ACE队」怪兽召唤·特殊召唤的场合才能发动。这张卡从手卡特殊召唤。
+  ②：抽卡以外的方法让对方手卡有卡加入的场合才能发动。自己从卡组抽2张，那之后选1张手卡丢弃。
