--- a/zh-CN/32731036.yaml
+++ b/zh-CN/32731036.yaml
@@ -1,3 +1,5 @@
-name: 深渊之兽 赤红逆龙
+name: 深渊之兽 赫界龙
 text: |-
-  这张卡不能通常召唤。「深淵の獣ルベリオン／深渊之兽 赤红逆龙」1回合1次，只有在将自己场上的1只等级6以上的龙族·暗属性怪兽解放的场合才能从手牌或墓地特殊召唤。这个卡名的①②效果1回合各能使用1次。①：可以将这张卡从手牌送入墓地发动。从卡组将1只「深淵の獣ルベリオン／深渊之兽 赤红逆龙」以外的「ビーステッド／深渊之兽」怪兽加入手牌。②：自己的主要阶段可以发动。从卡组选1张「烙印」永续魔法或永续陷阱卡以表侧表示放置到自己的场上。
+  这张卡不能通常召唤。「深渊之兽 赫界龙」1回合1次在把自己场上1只6星以上的龙族·暗属性怪兽解放的场合才能从手卡·墓地特殊召唤。这个卡名的①②的效果1回合各能使用1次。
+  ①：把这张卡从手卡送去墓地才能发动。从卡组把「深渊之兽 赫界龙」以外的1只「深渊之兽」怪兽加入手卡。
+  ②：自己主要阶段才能发动。从卡组选1张「烙印」永续魔法·永续陷阱卡在自己场上表侧表示放置。
