--- a/zh-CN/6767771.yaml
+++ b/zh-CN/6767771.yaml
@@ -1,3 +1,5 @@
-name: 壹世坏·向哀泪姬劈斩的弦声
+name: 劈穿壹世坏的弦声
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：场上有怪兽被召唤或特殊召唤的场合，若自己场上有「ティアラメンツ／哀泪姬」怪兽或者「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」存在则可以发动。从自己卡组上面将3张卡送入墓地。这个回合，对手场上的怪兽的攻击力下降500。②：这张卡被效果送入墓地的场合可以发动。从卡组将1张「ティアラメンツ／哀泪姬」陷阱卡加入手牌。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：场上有怪兽召唤·特殊召唤的场合，若自己场上有「珠泪哀歌族」怪兽或者「维萨斯-斯塔弗罗斯特」存在则能发动。从自己卡组上面把3张卡送去墓地。这个回合，对方场上的怪兽的攻击力下降500。
+  ②：这张卡被效果送去墓地的场合才能发动。从卡组把1张「珠泪哀歌族」陷阱卡加入手卡。
