--- a/zh-CN/94392192.yaml
+++ b/zh-CN/94392192.yaml
@@ -1,3 +1,6 @@
-name: 怒刹利食人魔
+name: 俱舍怒威族·食人魔
 text: |-
-  这个卡名的②③效果1回合各能使用1次。①：自己场上没有怪兽存在的场合，这张卡可以从手牌特殊召唤。②：自己的主要阶段可以发动。从卡组将1张「クシャトリラ／怒刹利」陷阱卡加入手牌。③：这张卡的攻击宣言时，或者对手发动怪兽的效果的场合可以发动。从对手卡组上面翻开5张卡，从那之中选1张以里侧表示除外。剩下的卡按照原来的顺序返回卡组上面。
+  这个卡名的②③的效果1回合各能使用1次。
+  ①：自己场上没有怪兽存在的场合，这张卡可以从手卡特殊召唤。
+  ②：自己主要阶段才能发动。从卡组把1张「俱舍怒威族」陷阱卡加入手卡。
+  ③：这张卡的攻击宣言时或者对方把怪兽的效果发动的场合才能发动。从对方卡组上面把最多5张卡翻开，从那之中选1张里侧表示除外。剩下的卡用原本的顺序回到卡组上面。
