--- a/zh-CN/29942771.yaml
+++ b/zh-CN/29942771.yaml
@@ -1,3 +1,6 @@
-name: 大自然山茶花
+name: 自然山茶
 text: |-
-  这个卡名的①②③效果1回合各能使用1次。①：这张卡召唤或特殊召唤成功的场合可以发动。从卡组将1张「ナチュル／大自然」卡送入墓地。②：只要这张卡在怪兽区存在，自己为了发动「ナチュル／大自然」怪兽的效果而要将怪兽解放的场合，可以从自己卡组上面将2张卡送入墓地作为代替。③：对手召唤或特殊召唤怪兽成功的场合可以发动。从自己的墓地选1只「ナチュル／大自然」怪兽特殊召唤。
+  这个卡名的①②③的效果1回合各能使用1次。
+  ①：这张卡召唤·特殊召唤成功的场合才能发动。从卡组把1张「自然」卡送去墓地。
+  ②：只要这张卡在怪兽区域存在，自己为让「自然」怪兽的效果发动而把怪兽解放的场合，可以作为代替从自己卡组上面把2张卡送去墓地。
+  ③：对方对怪兽的召唤·特殊召唤成功的场合才能发动。从自己墓地选1只「自然」怪兽特殊召唤。
