--- a/zh-CN/39552584.yaml
+++ b/zh-CN/39552584.yaml
@@ -1,4 +1,6 @@
-name: 暗黑界的龙神王 墨
+name: 暗黑界的龙神王 格拉法
 text: |-
-  「暗黒界の龍神 グラファ／暗黑界的龙神 墨」+暗属性怪兽
-  这个卡名的①效果1回合只能使用1次。①：对手发动怪兽的效果、通常魔法或通常陷阱卡时可以发动。那个效果变为「对手选自身的1张手牌舍弃」。②：融合召唤的这张卡因对手而从场上离开的场合可以发动。从自己的墓地的怪兽以及除外中的自己的怪兽之中，选1只「暗黒界の龍神 グラファ／暗黑界的龙神 墨」特殊召唤。那之后，有手牌的玩家选自身的1张手牌舍弃。
+  「暗黑界的龙神 格拉法」＋暗属性怪兽
+  这个卡名的①的效果1回合只能使用1次。
+  ①：对方把怪兽的效果·通常魔法·通常陷阱卡发动时才能发动。那个效果变成「对方选自身1张手卡丢弃」。
+  ②：融合召唤的这张卡因对方从场上离开的场合才能发动。从自己墓地的怪兽以及除外的自己怪兽之中选1只「暗黑界的龙神 格拉法」特殊召唤。那之后，有手卡的玩家选自身1张手卡丢弃。
