--- a/zh-CN/46037983.yaml
+++ b/zh-CN/46037983.yaml
@@ -1,3 +1,3 @@
-name: 异鱼之光 佩赛斯
+name: 魊影宇宙光 佩赛斯
 text: |-
-  这个卡名的①②③效果1回合各能使用1次。①：这张卡特殊召唤的回合可以发动。将包含这张卡的自己场上的怪兽作为同调素材来同调召唤1只鱼族同调怪兽。②：可以将自己场上的这张卡除外发动。从手牌特殊召唤1只「Paces, Light of the Ghoti／异鱼之光 佩赛斯」以外的鱼族怪兽。③：这张卡被除外的场合，下个回合的准备阶段可以发动。将这张卡特殊召唤。
+  可以把自己场上的这张卡除外；从手卡把「魊影宇宙光 佩赛斯」以外的1只鱼族怪兽特殊召唤。这张卡被除外的场合，下个回合的准备阶段：可以把除外的这张卡特殊召唤。这张卡特殊召唤的回合的对方主要阶段，可以（诱发即时效果）：用包含这张卡的自己场上的怪兽为素材把1只鱼族同调怪兽同调召唤。「魊影宇宙光 佩赛斯」的每个效果1回合各能使用1次。
