--- a/zh-CN/56700100.yaml
+++ b/zh-CN/56700100.yaml
@@ -1,3 +1,5 @@
-name: 皮儿利我的朋友
+name: 我的纯爱妖精朋友
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：可以支付500LP发动。从卡组向对手展示3张「ピュアリィ・マイフレンド／皮儿利我的朋友」以外的「ピュアリィ／皮儿利」卡，对手从那之中随机选1张。将那1张加入自己的手牌，剩下的返回卡组。②：自己场上的表侧表示的「ピュアリィ／皮儿利」多维怪兽因对手而从场上离开的场合可以发动（伤害步骤也可发动）。从自己的墓地选最多3张「ピュアリィ／皮儿利」速攻魔法加入手牌（同名卡最多1张）。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：支付500基本分才能发动。从卡组把「我的纯爱妖精朋友」以外的3张「纯爱妖精」卡给对方观看，对方从那之中随机选1张。那1张加入自己手卡，剩余回到卡组。
+  ②：自己场上的表侧表示的「纯爱妖精」超量怪兽因对方从场上离开的场合才能发动（伤害步骤也能发动）。从自己墓地选最多3张「纯爱妖精」速攻魔法卡加入手卡（同名卡最多1张）。
