--- a/zh-CN/67282505.yaml
+++ b/zh-CN/67282505.yaml
@@ -1,3 +1,5 @@
 name: 虫之忍者-蜜
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：自己场上有「忍者」卡或者以里侧守备表示怪兽存在的场合可以发动。将这张卡从手牌特殊召唤。②：对手发动怪兽的效果时，可以以自己场上的1只里侧守备表示怪兽为对象发动。使那只怪兽变为表侧守备表示，这张卡变为里侧守备表示。对象怪兽是「蟲の忍者－蜜／虫之忍者-蜜」以外的「忍者」怪兽的场合，再使那个对手的发动的效果无效。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：自己场上有「忍者」卡或者里侧守备表示怪兽存在的场合才能发动。这张卡从手卡特殊召唤。
+  ②：对方把怪兽的效果发动时，以自己场上1只里侧守备表示怪兽为对象才能发动。那只怪兽变成表侧守备表示，这张卡变成里侧守备表示。作为对象的怪兽是「虫之忍者-蜜」以外的「忍者」怪兽的场合，再把那个对方的所发动的效果无效。
