--- a/zh-CN/73421698.yaml
+++ b/zh-CN/73421698.yaml
@@ -1,3 +1,3 @@
-name: 异鱼天使 西弗
+name: 魊影精灵 西弗
 text: |-
-  这个卡名的①②③效果1回合各能使用1次。①：这张卡特殊召唤的回合的对手主要阶段可以发动。将包含这张卡的自己场上的怪兽作为同调素材来同调召唤1只鱼族同调怪兽。②：可以将这张卡从墓地除外，以自己场上的1只鱼族怪兽为对象发动。那只怪兽的攻击力直到回合结束时上升500。③：这张卡被除外的场合，下个回合的准备阶段可以发动。将这张卡特殊召唤。
+  可以把墓地的这张卡除外，以自己场上1只鱼族怪兽为对象；那只怪兽的攻击力直到回合结束时上升500。这张卡被除外的场合，下个回合的准备阶段：可以把除外的这张卡特殊召唤。这张卡特殊召唤的回合的对方主要阶段，可以（诱发即时效果）：用包含这张卡的自己场上的怪兽为素材把1只鱼族同调怪兽同调召唤。「魊影精灵 西弗」的每个效果1回合各能使用1次。
