--- a/zh-CN/7889323.yaml
+++ b/zh-CN/7889323.yaml
@@ -1,3 +1,5 @@
-name: 铁兽战线的死线
+name: 铁兽的死线
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：自己场上有兽族、兽战士族或鸟兽族怪兽被特殊召唤的场合，可以以除外中的1只自己的「トライブリゲード／铁兽战线」怪兽为对象发动。将那只怪兽加入手牌。②：自己的「トライブリゲード／铁兽战线」怪兽与对手怪兽进行过战斗的伤害计算后可以发动。使那只对手的怪兽返回持有者的手牌。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：自己场上有兽族·兽战士族·鸟兽族怪兽特殊召唤的场合，以除外的1只自己的「铁兽」怪兽为对象才能发动。那只怪兽加入手卡。
+  ②：自己的「铁兽」怪兽和对方怪兽进行战斗的伤害计算后才能发动。那只对方怪兽回到持有者手卡。
