Scrape partition 2, size 1000 (validation),

--- a/zh-CN/60362066.yaml
+++ b/zh-CN/60362066.yaml
@@ -1,3 +1,5 @@
-name: 壹世坏·使哀泪姬动摇的鼓动
+name: 摇撼壹世坏的鼓动
 text: |-
-  这个卡名的①②效果1回合只能有1次使用其中任意1个。①：可以以场上的1张魔法陷阱卡为对象发动。使那张卡返回持有者的卡组。那之后，选1张自己的手牌送入墓地。自己场上有「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」存在的场合，这个效果的对象可以是2张。②：这张卡被效果送入墓地的场合，可以以自己墓地的1张「ティアラメンツ／哀泪姬」陷阱卡为对象发动。将那张卡加入手牌。
+  这个卡名的①②的效果1回合只能有1次使用其中任意1个。
+  ①：以场上1张魔法·陷阱卡为对象才能发动。那张卡回到持有者卡组。那之后，选自己1张手卡送去墓地。自己场上有「维萨斯-斯塔弗罗斯特」存在的场合，这个效果的对象可以变成2张。
+  ②：这张卡被效果送去墓地的场合，以自己墓地1张「珠泪哀歌族」陷阱卡为对象才能发动。那张卡加入手卡。
