--- a/zh-CN/66069967.yaml
+++ b/zh-CN/66069967.yaml
@@ -1,3 +1,6 @@
-name: 占术姬 圣书缪斯
+name: 占术姬 书本缪斯
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：这张卡被解放并送入墓地的场合可以发动。将这张卡以里侧守备表示特殊召唤。②：这张卡翻转的场合可以发动。从卡组将1只「占術姫ビブリオムーサ／占术姬 圣书缪斯」以外的「占術姫／占术姬」怪兽和1张仪式魔法卡加入手牌。③：只要这张卡在怪兽区存在，自己场上的仪式怪兽就不会成为对手的效果的对象且不会被对手的效果破坏。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：这张卡被解放送去墓地的场合才能发动。这张卡里侧守备表示特殊召唤。
+  ②：这张卡反转的场合才能发动。从卡组把「占术姬 书本缪斯」以外的1只「占术姬」怪兽和1张仪式魔法卡加入手卡。
+  ③：只要这张卡在怪兽区域存在，自己场上的仪式怪兽不会成为对方的效果的对象，不会被对方的效果破坏。
