--- a/zh-CN/9416697.yaml
+++ b/zh-CN/9416697.yaml
@@ -1,3 +1,3 @@
-name: 异鱼哨兵 埃诺克
+name: 魊影海哨兵 伊诺克
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：这张卡召唤或特殊召唤成功的场合，可以以除外中的1只自己的等级4以下的鱼族怪兽为对象发动。将那只怪兽守备表示特殊召唤。用这个效果特殊召唤的怪兽的效果无效化。②：可以从手牌以及自己场上的表侧表示的卡之中，将1只鱼族怪兽除外发动。从卡组将1张「Ghoti／异鱼」陷阱卡加入手牌。
+  这张卡召唤·特殊召唤成功的场合：可以以除外的自己的1只4星以下的鱼族怪兽为对象；那只怪兽效果无效守备表示特殊召唤。可以从手卡以及自己场上表侧表示的卡之中把1只鱼族怪兽除外：从卡组把1张「魊影」陷阱卡加入手卡。「魊影海哨兵 伊诺克」的每个效果1回合各能使用1次。
