Scrape partition 3, size 1000 (validation),

--- a/zh-CN/26372118.yaml
+++ b/zh-CN/26372118.yaml
@@ -1,3 +1,4 @@
-name: 警报！
+name: A警报！
 text: |-
-  这个卡名规则上也当作「R－ACE／救援王牌」卡使用。这个卡名的卡1回合只能发动1张。①：从自己的墓地选1只「R－ACE／救援王牌」怪兽加入手牌。自己场上有「R－ACEハイドラント／救援王牌 消火栓」存在的场合，也能从卡组将1只「R－ACE／救援王牌」怪兽加入作为代替。
+  这个卡名在规则上也当作「救援ACE队」卡使用。这个卡名的卡在1回合只能发动1张。
+  ①：从自己墓地选1只「救援ACE队」怪兽加入手卡。自己场上有「救援ACE队 消防栓」存在的场合，也能作为代替从卡组把1只「救援ACE队」怪兽加入。
