--- a/zh-CN/6637331.yaml
+++ b/zh-CN/6637331.yaml
@@ -1,3 +1,5 @@
 name: 深渊之兽 德鲁伊鳞虫
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：可以以自己或者对手的墓地的1只光或暗属性怪兽为对象发动。将那只怪兽除外，将这张卡从手牌特殊召唤。对手场上有怪兽存在的场合，这个效果在对手的回合也能发动。②：这张卡从场上送入墓地的场合，可以以对手场上的1只特殊召唤的怪兽为对象发动。将那只怪兽送入墓地。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：以自己或者对方的墓地1只光·暗属性怪兽为对象才能发动。那只怪兽除外，这张卡从手卡特殊召唤。对方场上有怪兽存在的场合，这个效果在对方回合也能发动。
+  ②：这张卡从场上送去墓地的场合，以对方场上1只特殊召唤的怪兽为对象才能发动。那只怪兽送去墓地。
