--- a/zh-CN/70485614.yaml
+++ b/zh-CN/70485614.yaml
@@ -1,3 +1,6 @@
-name: 决战之各各康达
+name: 决战的戈尔工达
 text: |-
-  这个卡名的③效果1回合各能使用1次。①：这张卡只要在场上或墓地存在，卡名就当作「大砂海ゴールド・ゴルゴンダ／大沙海 黄金各各康达」使用。②：1回合1次，自己场上的卡要被战斗或效果破坏的场合，作为代替可以从额外卡组将1只需要以「アルバスの落胤／阿尔巴斯之落胤」作为融合素材的融合怪兽送入墓地。③：自己的场上或者墓地有「アルバスの落胤／阿尔巴斯之落胤」存在的场合，自己或对手的结束阶段可以发动。从手牌或卡组特殊召唤1只「スプリガンズ／炮藏守护者」怪兽。
+  这个卡名的③的效果1回合只能使用1次。
+  ①：这张卡的卡名只要在场上·墓地存在当作「大沙海 黄金戈尔工达」使用。
+  ②：1回合1次，自己场上的卡被战斗·效果破坏的场合，可以作为代替从额外卡组把以「阿不思的落胤」为融合素材的1只融合怪兽送去墓地。
+  ③：自己的场上或者墓地有「阿不思的落胤」存在的场合，自己·对方的结束阶段才能发动。从手卡·卡组把1只「护宝炮妖」怪兽特殊召唤。
