--- a/zh-CN/7459919.yaml
+++ b/zh-CN/7459919.yaml
@@ -1,3 +1,6 @@
-name: BF-刻夜之佐达
+name: 黑羽-刻夜之佐达
 text: |-
-  这个卡名的②③效果1回合只能有1次使用其中任意1个。①：只要这张卡在怪兽区存在，自己从额外卡组特殊召唤的就只能是同调怪兽。②：这张卡召唤或特殊召唤成功的场合，可以以场上的1只怪兽为对象发动。使那只怪兽返回持有者的手牌。③：可以将墓地的这张卡除外发动。从手牌或卡组特殊召唤1只等级5以上的「BF」怪兽。那之后，自己受到用这个效果特殊召唤的怪兽的攻击力数值的伤害。
+  这个卡名的②③的效果1回合只能有1次使用其中任意1个。
+  ①：只要这张卡在怪兽区域存在，自己不是同调怪兽不能从额外卡组特殊召唤。
+  ②：这张卡召唤·特殊召唤成功的场合，以场上1只怪兽为对象才能发动。那只怪兽回到持有者手卡。
+  ③：把墓地的这张卡除外才能发动。从手卡·卡组把1只5星以上的「黑羽」怪兽特殊召唤。那之后，自己受到这个效果特殊召唤的怪兽的攻击力数值的伤害。
