--- a/zh-CN/34690953.yaml
+++ b/zh-CN/34690953.yaml
@@ -1,3 +1,5 @@
-name: 禁咒 阿拉玛提亚
+name: 禁咒 阿拉马提亚
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：自己的主要阶段可以发动。将1只「勇者トークン／勇者衍生物」（天使族·地·4星·攻/守2000）特殊召唤到自己或者对手的场上。那之后，选1张自己的手牌送入墓地。这个效果发动的回合，自己特殊召唤的只能是「勇者トークン／勇者衍生物」以及记述了其衍生物名的怪兽。②：自己场上的怪兽被战斗或效果破坏的场合可以发动。将1只「勇者トークン／勇者衍生物」特殊召唤到自己或者对手的场上。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：自己主要阶段才能发动。在自己或者对方场上把1只「勇者衍生物」（天使族·地·4星·攻/守2000）特殊召唤。那之后，选自己1张手卡送去墓地。这个效果发动的回合，自己若非「勇者衍生物」以及有那个衍生物名记述的怪兽则不能特殊召唤。
+  ②：自己场上的怪兽被战斗·效果破坏的场合才能发动。在自己或者对方场上把1只「勇者衍生物」特殊召唤。
