--- a/zh-CN/55125728.yaml
+++ b/zh-CN/55125728.yaml
@@ -1,3 +1,6 @@
-name: 春化精的女神 维拉
+name: 春化精的女神 春
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：可以以对手场上的1只表侧表示怪兽为对象发动。得到那只怪兽的操作权。用这个效果得到操作权的怪兽变为地属性。②：对手的回合，可以以自己墓地的1只地属性怪兽为对象发动。将那只怪兽特殊召唤。③：1回合1次，对手发动的怪兽的效果处理时，自己场上有5只以上的地属性怪兽存在的场合，可以使那个发动的效果无效并破坏。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：以对方场上1只表侧表示怪兽为对象才能发动。得到那只怪兽的控制权。这个效果得到控制权的怪兽变成地属性。
+  ②：对方回合，以自己墓地1只地属性怪兽为对象才能发动。那只怪兽特殊召唤。
+  ③：1回合1次，对方发动的怪兽的效果处理时，自己场上有地属性怪兽5只以上存在的场合，可以把那个发动的效果无效并破坏。
