--- a/zh-CN/69120785.yaml
+++ b/zh-CN/69120785.yaml
@@ -1,3 +1,5 @@
-name: 深渊之兽 失白之龙
+name: 深渊之兽 白界丧失龙
 text: |-
-  这张卡不能通常召唤。只有在将自己场上的2只「ビーステッド／深渊之兽」怪兽解放的场合才能从手牌或墓地特殊召唤。①：只要用这个方法特殊召唤的这张卡在怪兽区存在，场上的表侧表示的仪式、融合、同调、多维、链接怪兽的效果就无效化。②：表侧表示的这张卡因对手的效果从场上离开的场合可以发动。直到对手的结束阶段，双方的额外卡组的里侧表示的卡全部以表侧表示除外。
+  这张卡不能通常召唤。把自己场上2只「深渊之兽」怪兽解放的场合才能从手卡·墓地特殊召唤。
+  ①：只要这个方法特殊召唤的这张卡在怪兽区域存在，场上的表侧表示的仪式·融合·同调·超量·连接怪兽的效果无效化。
+  ②：表侧表示的这张卡因对方的效果从场上离开的场合才能发动。直到对方结束阶段，双方的额外卡组的里侧表示的卡全部表侧表示除外。
