--- a/zh-CN/9940036.yaml
+++ b/zh-CN/9940036.yaml
@@ -1,4 +1,7 @@
-name: 分体论聚合者
+name: 分体论聚合员
 text: |-
-  等级9怪兽×2只以上
-  这个卡名的①②③效果1回合各能使用1次。①：这张卡多维召唤成功的场合可以发动。从额外卡组将1只怪兽送入墓地。②：可以以最多为这张卡的多维素材的数量的自己墓地的怪兽为对象发动。按照对象的数量将这张卡的多维素材取除，将对象怪兽叠放在这张卡下面作为多维素材。③：这张卡被送入墓地的场合，可以以场上的1张表侧表示的卡为对象发动。那张卡的效果直到回合结束时无效。
+  9星怪兽×2只以上
+  这个卡名的①②③的效果1回合各能使用1次。
+  ①：这张卡超量召唤成功的场合才能发动。从额外卡组把1只怪兽送去墓地。
+  ②：以最多有这张卡的超量素材数量的自己墓地的怪兽为对象才能发动。对象数量的这张卡的超量素材取除，作为对象的怪兽在这张卡下面重叠作为超量素材。
+  ③：这张卡被送去墓地的场合，以场上1张表侧表示的卡为对象才能发动。那张卡的效果直到回合结束时无效。
