Scrape partition 4, size 1000 (validation),

--- a/zh-CN/3289027.yaml
+++ b/zh-CN/3289027.yaml
@@ -1,3 +1,4 @@
-name: 暗黑界的隐者 珠
+name: 暗黑界的隐者 珀尔
 text: |-
-  这个卡名的效果1回合只能使用1次。①：这张卡被效果从手牌舍弃入墓地的场合，可以以「暗黒界の隠者 パアル／暗黑界的隐者 珠」以外的自己墓地的1只「暗黒界／暗黑界」怪兽为对象发动。将那只怪兽特殊召唤到自己或者对手的场上。是被对手的效果舍弃的场合，可以再从自己的手牌或墓地的怪兽以及除外中的自己的怪兽之中，选1只恶魔族怪兽特殊召唤到自己或者对手的场上。
+  这个卡名的效果1回合只能使用1次。
+  ①：这张卡被效果从手卡丢弃去墓地的场合，以「暗黑界的隐者 珀尔」以外的自己墓地1只「暗黑界」怪兽为对象才能发动。那只怪兽在自己或者对方场上特殊召唤。被对方的效果丢弃的场合，可以再从自己的手卡·墓地的怪兽以及除外的自己怪兽之中选1只恶魔族怪兽在自己或者对方场上特殊召唤。
