--- a/zh-CN/60242223.yaml
+++ b/zh-CN/60242223.yaml
@@ -1,3 +1,5 @@
-name: 深渊之兽 萨隆恶龙
+name: 深渊之兽 萨隆魔龙
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：可以以自己或者对手的墓地的1只光或暗属性怪兽为对象发动。将那只怪兽除外，将这张卡从手牌特殊召唤。对手场上有怪兽存在的场合，这个效果在对手的回合也能发动。②：这张卡被送入墓地的场合可以发动。从卡组将1只「深淵の獣サロニール／深渊之兽 萨隆恶龙」以外的「ビーステッド／深渊之兽」怪兽或者1张「烙印」魔法陷阱卡送入墓地。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：以自己或者对方的墓地1只光·暗属性怪兽为对象才能发动。那只怪兽除外，这张卡从手卡特殊召唤。对方场上有怪兽存在的场合，这个效果在对方回合也能发动。
+  ②：这张卡被送去墓地的场合才能发动。「深渊之兽 萨隆魔龙」以外的1只「深渊之兽」怪兽或者1张「烙印」魔法·陷阱卡从卡组送去墓地。
