--- a/zh-CN/16769305.yaml
+++ b/zh-CN/16769305.yaml
@@ -1,3 +1,5 @@
 name: 魔界造车-GT19
 text: |-
-  这个卡名的①②效果1回合只能有1次使用其中任意1个。①：这张卡翻转的场合，可以宣言1～9的任意等级发动。这张卡的等级直到回合结束时变为宣言的等级。②：翻转的这张卡以表侧表示存在的场合，自己或对手的主要阶段，可以以这张卡以外的自己或对手场上的1只表侧表示怪兽为对象发动。只将那只怪兽和这张卡作为素材来同调召唤。
+  这个卡名的①②的效果1回合只能有1次使用其中任意1个。
+  ①：这张卡反转的场合，宣言1～9的任意等级才能发动。这张卡的等级直到回合结束时变成宣言的等级。
+  ②：反转过的这张卡表侧表示存在的场合，自己·对方的主要阶段，以这张卡以外的自己·对方场上1只表侧表示怪兽为对象才能发动。只用那只怪兽和这张卡为素材作同调召唤。
