--- a/zh-CN/20212491.yaml
+++ b/zh-CN/20212491.yaml
@@ -1,3 +1,5 @@
-name: 皮儿利迷路的大街
+name: 流浪纯爱妖精街道
 text: |-
-  ①：自己场上的「ピュアリィ／皮儿利」怪兽在特殊召唤的回合不会成为对手的效果的对象。②：1回合1次，自己场上的表侧表示的「ピュアリィ／皮儿利」多维怪兽因对手而从场上离开的场合必定发动。从自己的卡组或墓地选1只等级1的「ピュアリィ／皮儿利」怪兽特殊召唤。③：双方的结束阶段，可以以场上的1只「ピュアリィ／皮儿利」多维怪兽为对象发动。从自己的卡组或墓地选1张「ピュアリィ／皮儿利」速攻魔法卡叠放在那只怪兽下面作为多维素材。
+  ①：自己场上的「纯爱妖精」怪兽在特殊召唤的回合不会成为对方的效果的对象。
+  ②：1回合1次，自己场上的表侧表示的「纯爱妖精」超量怪兽因对方从场上离开的场合发动。从自己的卡组·墓地选1只1星「纯爱妖精」怪兽特殊召唤。
+  ③：双方的结束阶段，以场上1只「纯爱妖精」超量怪兽为对象才能发动。从自己的卡组·墓地选1张「纯爱妖精」速攻魔法卡在那只怪兽下面重叠作为超量素材。
