--- a/zh-CN/20417688.yaml
+++ b/zh-CN/20417688.yaml
@@ -1,3 +1,5 @@
 name: 星逢的天河
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：可以向对手展示手牌的1只仪式怪兽发动。从卡组将1只与那只怪兽卡名不同而等级相同的仪式怪兽加入手牌。②：可以将墓地的这张卡除外，从手牌将1张仪式魔法卡送入墓地发动。这个效果变为与那张仪式魔法卡发动时的仪式召唤效果相同。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：把手卡1只仪式怪兽给对方观看才能发动。和那只怪兽是卡名不同并是等级相同的1只仪式怪兽从卡组加入手卡。
+  ②：把墓地的这张卡除外，从手卡把1张仪式魔法卡送去墓地才能发动。这个效果变成和那张仪式魔法卡发动时的仪式召唤效果相同。
