--- a/zh-CN/33578406.yaml
+++ b/zh-CN/33578406.yaml
@@ -1,3 +1,5 @@
 name: 真刀竹光
 text: |-
-  ①：装备怪兽的攻击力上升0。②：装备怪兽直接攻击给予战斗伤害时可以发动。将对手场上的怪兽全部破坏。③：可以将装备中的这张卡送入墓地发动。从卡组选1张「真刀竹光」以外的「竹光」装备魔法卡装备给场上的1只表侧表示怪兽。
+  ①：装备怪兽的攻击力上升0。
+  ②：装备怪兽直接攻击给与战斗伤害时才能发动。对方场上的怪兽全部破坏。
+  ③：把装备的这张卡送去墓地才能发动。从卡组选「真刀竹光」以外的1张「竹光」装备魔法卡给场上1只表侧表示怪兽装备。
