--- a/zh-CN/56347375.yaml
+++ b/zh-CN/56347375.yaml
@@ -1,5 +1,8 @@
-name: 龙剑士 点火不死鸟P
+name: 龙剑士 点火烈·凤凰
 text: |-
-  这个卡名规则上也当作「イグナイト／点火骑士」卡使用。这个卡名的怪兽效果1回合只能使用1次。①：场上的这张卡被战斗或效果破坏的场合可以发动。从卡组特殊召唤1只「竜剣士イグニスP／龙剑士 点火不死鸟P」以外的、「竜剣士／龙剑士」怪兽或者「イグナイト／点火骑士」怪兽。用这个效果特殊召唤的怪兽当作调整使用。
-pendulum: |-
-  这个卡名的灵摆效果1回合只能使用1次。①：自己的主要阶段可以发动。从自己的额外卡组使1只表侧表示的灵摆怪兽返回卡组。那之后，从卡组将1只灵摆怪兽以外的、「竜剣士／龙剑士」怪兽或者「イグナイト／点火骑士」怪兽加入手牌。
+  ←7 【灵摆】 7→
+  这个卡名的灵摆效果1回合只能使用1次。
+  ①：自己主要阶段才能发动。从自己的额外卡组让1只表侧表示的灵摆怪兽回到卡组。那之后，灵摆怪兽以外的1只「龙剑士」怪兽或者「点火骑士」怪兽从卡组加入手卡。
+  【怪兽效果】
+  这个卡名在规则上也当作「点火骑士」卡使用。这个卡名的怪兽效果1回合只能使用1次。
+  ①：场上的这张卡被战斗·效果破坏的场合才能发动。从卡组把「龙剑士 点火烈·凤凰」以外的1只「龙剑士」怪兽或者「点火骑士」怪兽特殊召唤。这个效果特殊召唤的怪兽当作调整使用。
