--- a/zh-CN/69973414.yaml
+++ b/zh-CN/69973414.yaml
@@ -1,3 +1,4 @@
-name: BF-双影
+name: 黑羽-双影
 text: |-
-  这个卡名的卡1回合只能发动1张。自己场上有2只以上的「BF」怪兽存在的场合，这张卡也能从手牌发动。①：从自己墓地的怪兽以及除外中的自己的怪兽之中，使1只「BF」调整和1只调整以外的「BF」怪兽返回卡组或额外卡组发动。从额外卡组将1只拥有与那2只等级合计相同的等级的、「BF」同调怪兽或者 「ブラックフェザー・ドラゴン／黑羽龙」当作同调召唤地特殊召唤。
+  这个卡名的卡在1回合只能发动1张。自己场上有「黑羽」怪兽2只以上存在的场合，这张卡的发动从手卡也能用。
+  ①：从自己墓地的怪兽以及除外的自己怪兽之中让「黑羽」调整1只和调整以外的「黑羽」怪兽1只回到卡组·额外卡组才能发动。把持有和那2只的等级合计相同等级的1只「黑羽」同调怪兽或者「黑羽龙」当作同调召唤从额外卡组特殊召唤。
