--- a/zh-CN/72329844.yaml
+++ b/zh-CN/72329844.yaml
@@ -1,4 +1,6 @@
-name: 雷光妖灵 炮藏人
+name: 卫星闪灵迅妖龙炮
 text: |-
-  包含等级2、阶级2或链接2的怪兽的怪兽2只
-  这个卡名的①②效果1回合只能有1次使用其中任意1个。这张卡在链接召唤的回合不能作为链接素材。①：这张卡链接召唤成功的场合可以发动。从卡组将1只等级2怪兽送入墓地。②：这张卡在场上存在的状态下，有其他的怪兽被特殊召唤的场合，可以将自己场上的1个多维素材取除，以场上的1只怪兽为对象发动。使那只怪兽返回持有者的手牌。
+  包含2星·2阶·连接2的怪兽在内的怪兽2只
+  这个卡名的①②的效果1回合只能有1次使用其中任意1个。这张卡在连接召唤的回合不能作为连接素材。
+  ①：这张卡连接召唤成功的场合才能发动。从卡组把1只2星怪兽送去墓地。
+  ②：这张卡在场上存在的状态，其他怪兽特殊召唤的场合，把自己场上1个超量素材取除，以场上1只怪兽为对象才能发动。那只怪兽回到持有者手卡。
