Scrape partition 5, size 1000 (validation),

--- a/zh-CN/41406613.yaml
+++ b/zh-CN/41406613.yaml
@@ -1,3 +1,4 @@
-name: 暗黑界的魔神王 虹
+name: 暗黑界的魔神王 雷恩
 text: |-
-  ①：这张卡可以使自己场上的1只等级7以下的「暗黒界／暗黑界」怪兽返回持有者的手牌来从墓地特殊召唤。②：这张卡被效果从手牌舍弃入墓地的场合可以发动。从卡组将1只「暗黒界の魔神王 レイン／暗黑界的魔神王 虹」以外的等级5以上的「暗黒界／暗黑界」怪兽加入手牌。是被对手的效果舍弃的场合，可以再从自己的卡组或墓地选1只等级4以下的「暗黒界／暗黑界」怪兽特殊召唤到自己或者对手的场上。
+  ①：这张卡可以让自己场上1只7星以下的「暗黑界」怪兽回到持有者手卡，从墓地特殊召唤。
+  ②：这张卡被效果从手卡丢弃去墓地的场合才能发动。从卡组把「暗黑界的魔神王 雷恩」以外的1只5星以上的「暗黑界」怪兽加入手卡。被对方的效果丢弃的场合，可以再从自己的卡组·墓地选1只4星以下的「暗黑界」怪兽在自己或者对方场上特殊召唤。
