--- a/zh-CN/20065259.yaml
+++ b/zh-CN/20065259.yaml
@@ -1,3 +1,5 @@
 name: 铳之忍者-火光
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：这张卡召唤、特殊召唤或翻转的场合可以发动。从自己的手牌或墓地选1只「銃の忍者－火光／铳之忍者-火光」以外的「忍者」怪兽以里侧守备表示特殊召唤。②：这张卡在墓地存在，仅以自己场上的1张「忍者」卡或者1只里侧守备表示怪兽为对象的对手的效果发动时可以发动。将这张卡以里侧守备表示特殊召唤，那张对象卡返回持有者的手牌。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：这张卡召唤·特殊召唤·反转的场合才能发动。从自己的手卡·墓地选「铳之忍者-火光」以外的1只「忍者」怪兽里侧守备表示特殊召唤。
+  ②：这张卡在墓地存在，只以自己场上的「忍者」卡1张或者里侧守备表示怪兽1只为对象的对方的效果发动时才能发动。这张卡里侧守备表示特殊召唤，那张成为对象的卡回到持有者手卡。
