--- a/zh-CN/27882993.yaml
+++ b/zh-CN/27882993.yaml
@@ -1,3 +1,5 @@
 name: 业火王后鲑
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：这张卡召唤或特殊召唤成功的场合可以发动。从自己的手牌、卡组或墓地选1只鱼族的通常怪兽特殊召唤。②：这张卡被战斗或者对手的效果破坏的场合可以发动。将任意数量的「ヘルポーンサーモントークン／地狱卒鲑衍生物」（鱼族·水·1星·攻/守0）特殊召唤到自己的场上。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：这张卡召唤·特殊召唤成功的场合才能发动。从自己的手卡·卡组·墓地选1只鱼族通常怪兽特殊召唤。
+  ②：这张卡被战斗或者对方的效果破坏的场合才能发动。在自己场上把「地狱兵卒鲑衍生物」（鱼族·水·1星·攻/守0）任意数量特殊召唤。
