--- a/zh-CN/30284022.yaml
+++ b/zh-CN/30284022.yaml
@@ -1,3 +1,5 @@
 name: 暗黑界的傀儡
 text: |-
-  这个卡名的卡1回合只能发动1张。①：可以以双方墓地的卡合计最多3张为对象发动。将那些卡除外。那之后，从手牌选1只恶魔族怪兽舍弃。②：自己的主要阶段可以将墓地的这张卡除外，以除外中的1只自己的恶魔族怪兽为对象发动。将那只怪兽加入手牌。这个效果在这张卡送入墓地的回合不能发动。
+  这个卡名的卡在1回合只能发动1张。
+  ①：以双方墓地的卡合计最多3张为对象才能发动。那些卡除外。那之后，从手卡选1只恶魔族怪兽丢弃。
+  ②：自己主要阶段把墓地的这张卡除外，以除外的1只自己的恶魔族怪兽为对象才能发动。那只怪兽加入手卡。这个效果在这张卡送去墓地的回合不能发动。
