--- a/zh-CN/33878367.yaml
+++ b/zh-CN/33878367.yaml
@@ -1,3 +1,5 @@
-name: 壹世坏·将哀泪姬涡卷的反响
+name: 壹世坏涡旋的反响
 text: |-
-  这个卡名的①②效果1回合只能有1次使用其中任意1个。①：从自己的卡组或墓地选1只「ティアラメンツ／哀泪姬」怪兽或者「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」特殊召唤。那之后，选种族或者属性与用这个效果特殊召唤的怪兽相同的自己场上的1只怪兽送入墓地。②：这张卡被效果送入墓地的场合，可以以除外中的自己的1张「ティアラメンツ／哀泪姬」陷阱卡为对象发动。将那张卡加入手牌。
+  这个卡名的①②的效果1回合只能有1次使用其中任意1个。
+  ①：从自己的卡组·墓地选1只「珠泪哀歌族」怪兽或者「维萨斯-斯塔弗罗斯特」特殊召唤。那之后，选种族或者属性和这个效果特殊召唤的怪兽相同的自己场上1只怪兽送去墓地。
+  ②：这张卡被效果送去墓地的场合，以除外的1张自己的「珠泪哀歌族」陷阱卡为对象才能发动。那张卡加入手卡。
