--- a/zh-CN/73244186.yaml
+++ b/zh-CN/73244186.yaml
@@ -1,3 +1,3 @@
-name: 贪欲之鳝
+name: 贪欲之海鳝壶
 text: |-
-  这个卡名的卡1回合只能发动1张。①：可以将自己场上的1只鱼族、海龙族或水族怪兽除外发动。自己从卡组抽2张。
+  把自己场上1只表侧表示的鱼族·海龙族·水族怪兽除外；自己从卡组抽2张。「贪欲之海鳝壶」在1回合只能发动1张。
