--- a/zh-CN/81519836.yaml
+++ b/zh-CN/81519836.yaml
@@ -1,3 +1,5 @@
 name: 苗与霞的春化精
 text: |-
-  这个卡名的①效果1回合只能使用1次。①：可以将这张卡，和1只怪兽或者1张「春化精」卡从手牌舍弃发动。从卡组将1只「苗と霞の春化精／苗与霞的春化精」以外的天使族·地属性怪兽加入手牌。那之后，可以从自己的墓地选1只地属性怪兽特殊召唤。这个回合，自己不能发动地属性以外的怪兽的效果。②：只要这张卡在怪兽区存在，「春化精」怪兽以外的场上的怪兽的攻击力就下降600。
+  这个卡名的①的效果1回合只能使用1次。
+  ①：把这张卡和1只怪兽或者和1张「春化精」卡从手卡丢弃才能发动。从卡组把「苗与霞的春化精」以外的1只天使族·地属性怪兽加入手卡。那之后，可以从自己墓地选1只地属性怪兽特殊召唤。这个回合，自己不能把地属性以外的怪兽的效果发动。
+  ②：只要这张卡在怪兽区域存在，「春化精」怪兽以外的场上的怪兽的攻击力下降600。
