Scrape partition 6, size 1000 (validation),

--- a/zh-CN/90000652.yaml
+++ b/zh-CN/90000652.yaml
@@ -1,3 +1,5 @@
-name: 救援王牌 消防战车人
+name: 救援ACE队 消防战车人
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：自己场上有「R－ACEファイア・エンジン／救援王牌 消防战车人」以外的「R－ACE／救援王牌」怪兽召唤或特殊召唤的场合可以发动。将这张卡从手牌特殊召唤。②：对手场上有怪兽被特殊召唤的场合可以发动。从自己的手牌、卡组或墓地选1只等级4以下的「R－ACE／救援王牌」怪兽特殊召唤。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：自己场上有「救援ACE队 消防战车人」以外的「救援ACE队」怪兽召唤·特殊召唤的场合才能发动。这张卡从手卡特殊召唤。
+  ②：对方场上有怪兽特殊召唤的场合才能发动。从自己的手卡·卡组·墓地选1只4星以下的「救援ACE队」怪兽特殊召唤。
