--- a/zh-CN/15947754.yaml
+++ b/zh-CN/15947754.yaml
@@ -1,3 +1,5 @@
-name: 沉默狼-卡耳波
+name: 沉默狼-卡鲁波狼犬
 text: |-
-  这个卡名的②效果1回合只能使用1次。①：这张卡召唤或特殊召唤成功的场合必定发动。将自己卡组最上面的卡当作使攻击力上升500的装备卡使用以里侧表示装备给这张卡。②：自己或对手的结束阶段必定发动。对手猜这张卡的①效果装备的卡的原种类（怪兽·魔法·陷阱）。猜中的场合，这张卡送入墓地。猜错的场合，随机选1张对手的手牌舍弃，这张卡返回持有者的手牌。
+  这个卡名的②的效果1回合只能使用1次。
+  ①：这张卡召唤·特殊召唤成功的场合发动。自己卡组最上面的卡当作攻击力上升500的装备卡使用以里侧表示给这张卡装备。
+  ②：自己·对方的结束阶段发动。对方对这张卡的①的效果装备中的卡的原本种类（怪兽·魔法·陷阱）作猜测。猜中的场合，这张卡送去墓地。猜错的场合，对方手卡随机选1张丢弃，这张卡回到持有者手卡。
