--- a/zh-CN/32152870.yaml
+++ b/zh-CN/32152870.yaml
@@ -1,3 +1,5 @@
-name: 肆世坏·械贬的惊爪兽世界
+name: 械贬的肆世坏
 text: |-
-  这个卡名的②效果1回合只能使用1次。①：可以以自己的场上或墓地的1张「肆世壊＝ライフォビア／肆世坏=莱希恐惧界」为对象发动。那张卡返回持有者的手牌。自己场上有「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」存在的场合，可以再选对手场上的1只表侧表示怪兽变为里侧守备表示。②：场上有3只以上的守备表示怪兽存在的场合可以将墓地的这张卡除外发动。从自己的墓地选1张「スケアクロー／惊爪兽」卡加入手牌。
+  这个卡名的②的效果1回合只能使用1次。
+  ①：以自己的场上·墓地1张「肆世坏-恐惧世界」为对象才能发动。那张卡回到持有者手卡。自己场上有「维萨斯-斯塔弗罗斯特」存在的场合，可以再选对方场上1只表侧表示怪兽变成里侧守备表示。
+  ②：场上有守备表示怪兽3只以上存在的场合，把墓地的这张卡除外才能发动。从自己墓地选1张「恐吓爪牙族」卡加入手卡。
