--- a/zh-CN/38339996.yaml
+++ b/zh-CN/38339996.yaml
@@ -1,3 +1,5 @@
-name: 救援王牌 脉冲灭火员
+name: 救援ACE队 脉冲灭火员
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：自己的主要阶段可以发动。选对手场上的1只攻击力最高的效果怪兽。这个回合，那只怪兽不能发动在场上发动的效果。②：对手场上的怪兽的效果发动时，可以将手牌或场上的这张卡解放发动。从卡组特殊召唤1只机械族的「R－ACE／救援王牌」怪兽。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：自己主要阶段才能发动。选对方场上1只攻击力最高的效果怪兽。这个回合，那只怪兽不能把场上发动的效果发动。
+  ②：对方把场上的怪兽的效果发动时，把手卡·场上的这张卡解放才能发动。从卡组把1只机械族「救援ACE队」怪兽特殊召唤。
