--- a/zh-CN/47219274.yaml
+++ b/zh-CN/47219274.yaml
@@ -1,4 +1,7 @@
-name: 神碑之牙 弗雷奇
+name: 神碑之牙 弗利基
 text: |-
   「神碑」怪兽×2
-  这个卡名的③效果1回合只能使用1次。①：额外怪兽区的这张卡进行战斗的攻击宣言时可以发动。从对手卡组上面将2张卡除外。②：这张卡的战斗发生的对双方的战斗伤害变为0。③：场上的这张卡被战斗或效果破坏的场合，可以以自己墓地的1张「神碑」速攻魔法卡为对象发动。将那张卡加入手牌。
+  这个卡名的③的效果1回合只能使用1次。
+  ①：额外怪兽区域的这张卡进行战斗的攻击宣言时才能发动。从对方卡组上面把2张卡除外。
+  ②：这张卡的战斗发生的双方的战斗伤害变成0。
+  ③：场上的这张卡被战斗·效果破坏的场合，以自己墓地1张「神碑」速攻魔法卡为对象才能发动。那张卡加入手卡。
