--- a/zh-CN/96367119.yaml
+++ b/zh-CN/96367119.yaml
@@ -1,3 +1,5 @@
 name: 黑翼高洁
 text: |-
-  这个卡名的①②效果1回合只能有1次使用其中任意1个。①：魔法陷阱卡发动时，可以将自己场上的1个黑羽指示物取除发动。使其发动无效并破坏。②：自己场上有 「ブラックフェザー・ドラゴン／黑羽龙」存在的场合可以发动。将墓地的这张卡盖放到自己的场上。用这个效果盖放的这张卡从场上离开的场合除外。
+  这个卡名的①②的效果1回合只能有1次使用其中任意1个。
+  ①：魔法·陷阱卡发动时，把自己场上1个黑羽指示物取除才能发动。那个发动无效并破坏。
+  ②：自己场上有「黑羽龙」存在的场合才能发动。墓地的这张卡在自己场上盖放。这个效果盖放的这张卡从场上离开的场合除外。
