Scrape partition 7, size 1000 (validation),

--- a/zh-CN/3167439.yaml
+++ b/zh-CN/3167439.yaml
@@ -1,3 +1,5 @@
 name: 暗黑界的惩罚
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：自己或者对手召唤或特殊召唤怪兽之际可以发动。使其无效，将那些怪兽破坏。那之后，从手牌选1只恶魔族怪兽舍弃。②：自己场上的「暗黒界／暗黑界」怪兽要被战斗或者对手的效果破坏的场合，可以将墓地的这张卡除外作为代替。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：自己或者对方把怪兽召唤·特殊召唤之际才能发动。那个无效，那些怪兽破坏。那之后，从手卡选1只恶魔族怪兽丢弃。
+  ②：自己场上的「暗黑界」怪兽被战斗或者对方的效果破坏的场合，可以作为代替把墓地的这张卡除外。
