--- a/zh-CN/68304193.yaml
+++ b/zh-CN/68304193.yaml
@@ -1,3 +1,6 @@
-name: 怒刹利独角兽
+name: 俱舍怒威族·独角兽
 text: |-
-  这个卡名的②③效果1回合各能使用1次。①：自己场上没有怪兽存在的场合，这张卡可以从手牌特殊召唤。②：自己的主要阶段可以发动。从卡组将1张「クシャトリラ／怒刹利」魔法卡加入手牌。③：这张卡的攻击宣言时，或者对手发动怪兽的效果的场合可以发动。确认对手的额外卡组，选那之中的1只怪兽以里侧表示除外。
+  这个卡名的②③的效果1回合各能使用1次。
+  ①：自己场上没有怪兽存在的场合，这张卡可以从手卡特殊召唤。
+  ②：自己主要阶段才能发动。从卡组把1张「俱舍怒威族」魔法卡加入手卡。
+  ③：这张卡的攻击宣言时或者对方把怪兽的效果发动的场合才能发动。把对方的额外卡组确认，选那之内的1只怪兽里侧表示除外。
