--- a/zh-CN/28004531.yaml
+++ b/zh-CN/28004531.yaml
@@ -1,3 +1,5 @@
 name: 空牙团的载货 雷克斯
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：这张卡召唤或特殊召唤成功的场合可以发动。从卡组将1张「空牙団／空牙团」魔法陷阱卡加入手牌。②：自己场上有「空牙団／空牙团」怪兽存在的场合，自己或对手的主要阶段可以将墓地的这张卡除外，以自己墓地的1张「空牙団／空牙团」卡为对象发动。将那张卡加入手牌。对象卡是怪兽的场合，也能不加入手牌而是特殊召唤。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：这张卡召唤·特殊召唤成功的场合才能发动。从卡组把1张「空牙团」魔法·陷阱卡加入手卡。
+  ②：自己场上有「空牙团」怪兽存在的场合，自己·对方的主要阶段把墓地的这张卡除外，以自己墓地1张「空牙团」卡为对象才能发动。那张卡加入手卡。作为对象的卡是怪兽的场合，也能不加入手卡特殊召唤。
