--- a/zh-CN/29599813.yaml
+++ b/zh-CN/29599813.yaml
@@ -1,4 +1,6 @@
-name: 皮儿利的美丽回忆
+name: 纯爱妖精可爱回忆
 text: |-
-  ①：双方恢复1000LP。并且，可以适用以下的效果。
-  ●选1张自己的手牌舍弃，从卡组特殊召唤1只等级1的「ピュアリィ／皮儿利」怪兽。②：拥有这张卡作为素材的「ピュアリィ／皮儿利」多维怪兽得到以下的效果。●1回合1次，可以将这张卡以外的自己场上的1张卡送入墓地，以对手场上的1张卡为对象发动。将那张卡叠放在这张卡下面作为多维素材。
+  ①：双方回复1000基本分。并且，可以再让以下效果适用。
+  ●选自己1张手卡丢弃，从卡组把1只1星「纯爱妖精」怪兽特殊召唤。
+  ②：持有这张卡作为素材中的「纯爱妖精」超量怪兽得到以下效果。
+  ●1回合1次，把这张卡以外的自己场上1张卡送去墓地，以对方场上1张卡为对象才能发动。那张卡在这张卡下面重叠作为超量素材。
