--- a/zh-CN/31887806.yaml
+++ b/zh-CN/31887806.yaml
@@ -1,3 +1,6 @@
 name: 宙之忍者-鸟帷
 text: |-
-  这个卡名的①③效果1回合各能使用1次。①：可以将这张卡从手牌送入墓地发动。从手牌以表侧守备表示或者里侧守备表示特殊召唤1只「忍者」怪兽。②：这张卡在特殊召唤或翻转的回合不会被战斗或效果破坏。③：对手的主要阶段以及战斗阶段可以发动。从自己的手牌或场上将「忍者」融合怪兽卡规定的融合素材怪兽送入墓地，从额外卡组融合召唤将那1只融合怪兽。
+  这个卡名的①③的效果1回合各能使用1次。
+  ①：把这张卡从手卡送去墓地才能发动。从手卡把1只「忍者」怪兽表侧守备表示或者里侧守备表示特殊召唤。
+  ②：这张卡在特殊召唤·反转的回合不会被战斗·效果破坏。
+  ③：对方的主要阶段以及战斗阶段才能发动。从自己的手卡·场上把「忍者」融合怪兽卡决定的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。
