--- a/zh-CN/77895328.yaml
+++ b/zh-CN/77895328.yaml
@@ -1,3 +1,5 @@
-name: 暗黑界的门卫 品红
+name: 暗黑界的门番 真塔
 text: |-
-  自己1回合只能特殊召唤1次「暗黒界の門番 ゼンタ／暗黑界的门卫 品红」。①：可以将这张卡从手牌舍弃发动。从卡组将1张「暗黒界の門／暗黑界之门」加入手牌。②：这张卡被除外的场合，若自己场上有「暗黒界／暗黑界」卡存在则可以发动。将这张卡特殊召唤。
+  自己对「暗黑界的门番 真塔」1回合只能有1次特殊召唤。
+  ①：把这张卡从手卡丢弃去墓地才能发动。从卡组把1张「暗黑界之门」加入手卡。
+  ②：这张卡被除外的场合，若自己场上有「暗黑界」卡存在则能发动。这张卡特殊召唤。
