--- a/zh-CN/89552119.yaml
+++ b/zh-CN/89552119.yaml
@@ -1,3 +1,5 @@
 name: 精灵冥骑-急还马
 text: |-
-  这个卡名的②效果1回合只能使用1次。①：战斗阶段以外，怪兽区的这张卡会送入墓地。②：这张卡在墓地存在的场合，自己或对手的战斗阶段开始时，可以从手牌以及自己场上的表侧表示怪兽之中，将1只植物族怪兽送入墓地发动。将这张卡特殊召唤。那之后，可以从自己或者对手的墓地选1只怪兽特殊召唤到自己的场上。用这个效果特殊召唤的怪兽全部在战斗阶段结束时送入墓地。
+  这个卡名的②的效果1回合只能使用1次。
+  ①：除战斗阶段以外，怪兽区域的这张卡送去墓地。
+  ②：这张卡在墓地存在的场合，自己·对方的战斗阶段开始时，从手卡以及自己场上的表侧表示怪兽之中把1只植物族怪兽送去墓地才能发动。这张卡特殊召唤。那之后，可以从自己或者对方的墓地选1只怪兽在自己场上特殊召唤。这个效果特殊召唤的怪兽全部在战斗阶段结束时送去墓地。
