Scrape partition 8, size 1000 (validation),

--- a/zh-CN/54092240.yaml
+++ b/zh-CN/54092240.yaml
@@ -1,3 +1,5 @@
-name: 提赛亚圣灵器
+name: 忒塞亚圣灵器
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：自己场上有「勇者トークン／勇者衍生物」存在的场合可以发动。将这张卡从手牌特殊召唤。②：可以向对手展示手牌的1张记述了「勇者トークン／勇者衍生物」这个衍生物名的卡发动。从卡组将1张通常魔法卡以外的、记述了「勇者トークン／勇者衍生物」这个衍生物名的魔法卡加入手牌。这个效果发动的回合，自己特殊召唤的只能是「勇者トークン／勇者衍生物」以及记述了其衍生物名的怪兽。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：自己场上有「勇者衍生物」存在的场合才能发动。这张卡从手卡特殊召唤。
+  ②：把有「勇者衍生物」的衍生物名记述的手卡1张卡给对方观看才能发动。把通常魔法卡以外的有「勇者衍生物」的衍生物名记述的1张魔法卡从卡组加入手卡。这个效果发动的回合，自己若非「勇者衍生物」以及有那个衍生物名记述的怪兽则不能特殊召唤。
