--- a/zh-CN/71187462.yaml
+++ b/zh-CN/71187462.yaml
@@ -1,3 +1,5 @@
-name: BF-无赖之伐他
+name: 黑羽-无赖之伐他
 text: |-
-  这个卡名的以①的方法所作的特殊召唤1回合只能1次，②效果1回合只能使用1次。①：自己场上有「BF－無頼のヴァータ／BF-无赖之伐他」以外的「BF」怪兽存在的场合，这张卡可以从手牌特殊召唤。②：自己的主要阶段可以发动。将等级合计为8的这张卡和调整以外的卡组的1只「BF」怪兽送入墓地，从额外卡组特殊召唤1只 「ブラックフェザー・ドラゴン／黑羽龙」。这个回合，自己从额外卡组特殊召唤的只能是暗属性怪兽。
+  这个卡名的作为①的方法的特殊召唤1回合只能有1次，作为②的效果1回合只能使用1次。
+  ①：自己场上有「黑羽-无赖之伐他」以外的「黑羽」怪兽存在的场合，这张卡可以从手卡特殊召唤。
+  ②：自己主要阶段才能发动。等级合计直到8的这张卡和除调整以外的卡组的「黑羽」怪兽1只以上送去墓地，把1只「黑羽龙」从额外卡组特殊召唤。这个回合，自己不是暗属性怪兽不能从额外卡组特殊召唤。
