--- a/zh-CN/92332424.yaml
+++ b/zh-CN/92332424.yaml
@@ -1,5 +1,9 @@
-name: 龙剑士 威风天马P
+name: 龙剑士 威风凛·飞马
 text: |-
-  这个卡名规则上也当作「マジェスペクター／威风妖怪」卡使用。这个卡名的②怪兽效果1回合只能使用1次。①：可以将这张卡从手牌舍弃发动。这个回合，自己场上的「竜剣士／龙剑士」怪兽不会成为对手的效果的对象，不会被对手的效果破坏。这个效果在对手的回合也能发动。②：这张卡灵摆召唤或者用「竜剣士／龙剑士」卡的效果特殊召唤成功的场合可以发动。从卡组将1张场地魔法卡加入手牌。那之后，选1张自己的手牌舍弃。
-pendulum: |-
-  这个卡名的灵摆效果1回合只能使用1次。①：另一边的自己的灵摆区有「竜剣士／龙剑士」卡或者「マジェスペクター／威风妖怪」卡存在的场合可以发动。从卡组将1只与那张卡原卡名不同的「竜剣士／龙剑士」灵摆怪兽加入手牌。那之后，选自己的灵摆区的1张卡破坏。
+  ←2 【灵摆】 2→
+  这个卡名的灵摆效果1回合只能使用1次。
+  ①：另一边的自己的灵摆区域有「龙剑士」卡或者「威风妖怪」卡存在的场合才能发动。原本卡名和那张卡不同的1只「龙剑士」灵摆怪兽从卡组加入手卡。那之后，可以选自己的灵摆区域1张卡破坏。
+  【怪兽效果】
+  这个卡名在规则上也当作「威风妖怪」卡使用。这个卡名的②的怪兽效果1回合只能使用1次。
+  ①：把这张卡从手卡丢弃才能发动。这个回合，自己场上的「龙剑士」怪兽不会成为对方的效果的对象，不会被对方的效果破坏。这个效果在对方回合也能发动。
+  ②：这张卡灵摆召唤或者用「龙剑士」卡的效果特殊召唤成功的场合才能发动。从卡组把1张场地魔法卡加入手卡。那之后，选自己1张手卡丢弃。
