--- a/zh-CN/28720123.yaml
+++ b/zh-CN/28720123.yaml
@@ -1,5 +1,8 @@
-name: 龙剑士 动力加能P
+name: 龙剑士 雾动轰·输力
 text: |-
-  这个卡名规则上也当作「ダイナミスト／汽雾动力」卡使用。这个卡名的怪兽效果1回合只能使用1次。①：这张卡被解放的场合可以发动。从自己的额外卡组将1只「竜剣士ダイナマイトP／龙剑士 动力加能P」以外的表侧表示的、「竜剣士／龙剑士」灵摆怪兽或者「ダイナミスト／汽雾动力」灵摆怪兽加入手牌。
-pendulum: |-
-  这个卡名的灵摆效果1回合只能使用1次。①：可以以另一边的自己的灵摆区的1张「竜剣士／龙剑士」灵摆怪兽或者「ダイナミスト／汽雾动力」卡为对象发动。将那张卡特殊召唤。
+  ←6 【灵摆】 6→
+  这个卡名的灵摆效果1回合只能使用1次。
+  ①：以另一边的自己的灵摆区域1张「龙剑士」卡或者「雾动机龙」卡为对象才能发动。那张卡特殊召唤。
+  【怪兽效果】
+  这个卡名在规则上也当作「雾动机龙」卡使用。这个卡名的怪兽效果1回合只能使用1次。
+  ①：这张卡被解放的场合才能发动。从自己的额外卡组把「龙剑士 雾动轰·输力」以外的表侧表示的1只「龙剑士」灵摆怪兽或者「雾动机龙」灵摆怪兽加入手卡。
