--- a/zh-CN/42932862.yaml
+++ b/zh-CN/42932862.yaml
@@ -1,3 +1,7 @@
-name: 冥占术姬 塔罗之幽魂
+name: 冥占术姬 塔罗幽巫女
 text: |-
-  藉由「冥占術の儀式／冥占术的仪式」降临。这张卡只有用仪式召唤以及「聖占術姫タロットレイ／圣占术姬 塔罗之光」的效果才能特殊召唤。这个卡名的①②效果1回合各能使用1次。①：这张卡翻转的场合可以发动。从卡组以里侧守备表示特殊召唤1只翻转怪兽。②：自己或对手的回合，可以从以下的效果中选择1个发动。●选自己场上的任意数量的里侧表示怪兽变为表侧守备表示。●选自己场上的任意数量的表侧表示怪兽变为里侧守备表示。
+  「冥占术的仪式」降临。这张卡用仪式召唤以及「圣占术姬 塔罗光巫女」的效果才能特殊召唤。这个卡名的①②的效果1回合各能使用1次。
+  ①：这张卡反转的场合才能发动。从卡组把1只反转怪兽里侧守备表示特殊召唤。
+  ②：自己·对方回合，可以从以下效果选择1个发动。
+  ●选自己场上的里侧表示怪兽任意数量变成表侧守备表示。
+  ●选自己场上的表侧表示怪兽任意数量变成里侧守备表示。
