--- a/zh-CN/69540484.yaml
+++ b/zh-CN/69540484.yaml
@@ -1,3 +1,6 @@
-name: 怒刹利停泊地
+name: 俱舍怒威族的停泊地
 text: |-
-  这个卡名的①②③效果1回合各能使用1次。①：自己要召唤等级7怪兽的场合可以不作所需的解放。②：自己的主要阶段可以发动。从自己墓地的怪兽以及除外中的自己的怪兽之中，选1只多维怪兽以外的「クシャトリラ／怒刹利」怪兽特殊召唤。③：对手发动魔法卡的效果的场合，若自己场上有「クシャトリラ／怒刹利」怪兽存在，则可以以对手墓地的3张卡为对象发动。将那些卡以里侧表示除外。
+  这个卡名的①②③的效果1回合各能使用1次。
+  ①：自己在7星怪兽召唤的场合需要的解放可以不用。
+  ②：自己主要阶段才能发动。从自己墓地的怪兽以及除外的自己怪兽之中选超量怪兽以外的1只「俱舍怒威族」怪兽特殊召唤。
+  ③：对方把魔法卡的效果发动的场合，若自己场上有「俱舍怒威族」怪兽存在，以对方墓地3张卡为对象才能发动。那些卡里侧表示除外。
