--- a/zh-CN/70465810.yaml
+++ b/zh-CN/70465810.yaml
@@ -1,3 +1,5 @@
-name: BF-幻耀之苏德里
+name: 黑羽-幻耀之苏德里
 text: |-
-  这个卡名的②效果1回合只能使用1次。①：这张卡召唤成功时可以发动。从卡组将1张除「BF－幻耀のスズリ／BF-幻耀之苏德里」以外的、记述了 「ブラックフェザー・ドラゴン／黑羽龙」这个卡名的卡加入手牌。②：可以将自己场上的1只怪兽解放发动。将1只「幻耀トークン／幻耀衍生物」（鸟兽族·调整·暗·2星·攻/守700）特殊召唤。
+  这个卡名的②的效果1回合只能使用1次。
+  ①：这张卡召唤成功时才能发动。除「黑羽-幻耀之苏德里」外的1张有「黑羽龙」的卡名记述的卡从卡组加入手卡。
+  ②：把自己场上1只怪兽解放才能发动。在自己场上把1只「幻耀衍生物」（鸟兽族·调整·暗·2星·攻/守700）特殊召唤。那之后，自己受到700伤害。这个效果发动的回合，自己不是同调怪兽不能从额外卡组特殊召唤。
