--- a/zh-CN/93454062.yaml
+++ b/zh-CN/93454062.yaml
@@ -1,3 +1,5 @@
-name: 大自然蝼蛄
+name: 自然蝼蛄
 text: |-
-  这个卡名的①②效果1回合只能使用1次。①：自己或对手的主要阶段，可以将这张卡解放发动。从卡组特殊召唤1只「ナチュル／大自然」怪兽。攻击力最高的怪兽在对手场上存在的场合，用这个效果特殊召唤的数量可以是2只。②：这张卡在墓地存在的状态下，对手从额外卡组特殊召唤怪兽的场合，或者自己从额外卡组特殊召唤「ナチュル／大自然」怪兽的场合可以发动。将这张卡特殊召唤。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：自己·对方的主要阶段，把这张卡解放才能发动。从卡组把1只「自然」怪兽特殊召唤。攻击力最高的怪兽在对方场上存在的场合，这个效果特殊召唤的数量可以变成2只。
+  ②：这张卡在墓地存在的状态，对方从额外卡组把怪兽特殊召唤的场合或者自己从额外卡组把「自然」怪兽特殊召唤的场合才能发动。这张卡特殊召唤。
