--- a/zh-CN/95245571.yaml
+++ b/zh-CN/95245571.yaml
@@ -1,3 +1,5 @@
-name: 肆世坏·惊爪兽士的双牙
+name: 肆世坏的双牙
 text: |-
-  这个卡名的卡1回合只能发动1张。①：可以将自己场上的1只「スケアクロー／惊爪兽」解放，以对手场上的2张卡为对象发动。将那些卡破坏。自己场上有「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」存在的场合，用这个效果破坏的卡不去墓地而是除外。②：场上有链接3以上的怪兽存在的场合，可以将墓地的这张卡除外发动。这个回合，场上的链接怪兽不能发动效果。
+  这个卡名的卡在1回合只能发动1张。
+  ①：把自己场上1只「恐吓爪牙族」怪兽解放，以对方场上2张卡为对象才能发动。那些卡破坏。自己场上有「维萨斯-斯塔弗罗斯特」存在的场合，这个效果破坏的卡不去墓地而除外。
+  ②：场上有连接3以上的怪兽存在的场合，把墓地的这张卡除外才能发动。这个回合，场上的连接怪兽不能把效果发动。
