--- a/zh-CN/95545183.yaml
+++ b/zh-CN/95545183.yaml
@@ -1,3 +1,5 @@
-name: 异谭忍法帖
+name: 异谭的忍法帖
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：对手场上有卡存在的场合可以发动。从自己的卡组或墓地选「異譚の忍法帖／异谭忍法帖」以外的「忍法」魔法陷阱卡以及「忍者」怪兽各最多1张盖放在自己的场上。（不是从卡组、墓地各最多1张则不能盖放）。②：盖放放这张卡被送入墓地的场合，可以以场上的1只表侧表示怪兽为对象发动。使那只怪兽变为里侧守备表示。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：对方场上有卡存在的场合才能发动。「异谭的忍法帖」以外的「忍法」魔法·陷阱卡以及「忍者」怪兽各最多1张从自己的卡组·墓地选出在自己场上盖放（从卡组·墓地各只能有最多1张盖放）。
+  ②：盖放的这张卡被送去墓地的场合，以场上1只表侧表示怪兽为对象才能发动。那只怪兽变成里侧守备表示。
