Scrape partition 9, size 1000 (validation),

--- a/zh-CN/25550531.yaml
+++ b/zh-CN/25550531.yaml
@@ -1,3 +1,4 @@
-name: 皮儿利
+name: 纯爱妖精
 text: |-
-  ①：这张卡召唤或特殊召唤成功的场合可以发动。从自己卡组上面翻开3张卡。从那之中选1张「ピュアリィ／皮儿利」魔法陷阱卡加入手牌。剩下的卡按照喜欢的顺序返回卡组下面。②：1回合1次，自己的主要阶段可以发动。向对手展示手牌的1张「ピュアリィ／皮儿利」速攻魔法卡，从额外卡组将记述了那个卡名的1只多维怪兽叠放在自己场上的这张卡上当作多维召唤地特殊召唤，将展示的卡叠放在那只多维怪兽下面作为多维素材。
+  ①：这张卡召唤·特殊召唤成功的场合才能发动。从自己卡组上面把3张卡翻开。可以从那之中选1张「纯爱妖精」魔法·陷阱卡加入手卡。剩下的卡用喜欢的顺序回到卡组下面。
+  ②：1回合1次，自己主要阶段才能发动。手卡1张「纯爱妖精」速攻魔法卡给对方观看，把有那个卡名记述的1只超量怪兽在自己场上的这张卡上面重叠当作超量召唤从额外卡组特殊召唤，给人观看的卡在那只超量怪兽下面重叠作为超量素材。
