--- a/zh-CN/34813545.yaml
+++ b/zh-CN/34813545.yaml
@@ -1,6 +1,6 @@
-name: 大自然的春风
+name: 自然的春风
 text: |-
-  ①：可以从以下的效果中选择1个发动。
-  ●从自己的手牌或墓地选1只「ナチュル／大自然」怪兽特殊召唤。
-  ●将包含「ナチュル／大自然」怪兽的自己场上的怪兽作为素材来同调召唤。
-  ●从自己的场上将融合怪兽卡规定的、包含「ナチュル／大自然」怪兽的融合素材怪兽送入墓地，从额外卡组融合召唤那1只融合怪兽。
+  ①：可以从以下效果选择1个发动。
+  ●从自己的手卡·墓地选1只「自然」怪兽特殊召唤。
+  ●用包含「自然」怪兽的自己场上的怪兽为素材作同调召唤。
+  ●从自己场上把融合怪兽卡决定的包含「自然」怪兽的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。
