--- a/zh-CN/68250822.yaml
+++ b/zh-CN/68250822.yaml
@@ -1,6 +1,7 @@
-name: 雷光妖灵双交叉
+name: 卫星闪灵双人交叉金臂勾
 text: |-
-  这个卡名的卡1回合只能发动1张。①：可以以自己或者对手的、场上或墓地的1只怪兽为对象，从以下的效果中选择1个发动。
-  ●选自己场上的1只阶级2怪兽，将对象怪兽叠放在其下面作为多维素材。
-  ●将作为对象的对手场上的怪兽放置到是自己场上的链接2怪兽的链接端的自己场上得到操作权。
-  ●将作为对象的墓地的怪兽特殊召唤到是自己场上的链接2怪兽的链接端的自己场上。
+  这个卡名的卡在1回合只能发动1张。
+  ①：可以以自己或者对方的场上·墓地1只怪兽为对象，从以下效果选择1个发动。
+  ●选自己场上1只2阶怪兽，那下面把作为对象的怪兽重叠作为超量素材。
+  ●作为对象的对方场上的怪兽在作为自己场上的连接2怪兽所连接区的自己场上放置得到控制权。
+  ●作为对象的墓地的怪兽在作为自己场上的连接2怪兽所连接区的自己场上特殊召唤。
