--- a/zh-CN/7206349.yaml
+++ b/zh-CN/7206349.yaml
@@ -1,3 +1,6 @@
 name: 春化精的花盛
 text: |-
-  这个卡名的②③效果1回合各能使用1次。①：只要自己场上有5只以上的地属性怪兽存在，自己场上的怪兽的攻击力就上升1000。②：可以从自己的手牌或墓地将1张「春化精と花蕾／春化精与花蕾」除外发动。从卡组特殊召唤1只「春化精の女神 ヴェーラ／春化精的女神 维拉」。③：「春化精」怪兽从自己的墓地特殊召唤的场合，可以以自己或者对手的场上或墓地的1只怪兽为对象发动。使那只怪兽返回持有者的手牌。
+  这个卡名的②③的效果1回合各能使用1次。
+  ①：只要自己场上有地属性怪兽5只以上存在，自己场上的怪兽的攻击力上升1000。
+  ②：从自己的手卡·墓地把1张「春化精与花蕾」除外才能发动。从卡组把1只「春化精的女神 春」特殊召唤。
+  ③：从自己墓地有「春化精」怪兽特殊召唤的场合，以自己或者对方的场上·墓地1只怪兽为对象才能发动。那只怪兽回到持有者手卡。
