--- a/zh-CN/94423983.yaml
+++ b/zh-CN/94423983.yaml
@@ -1,3 +1,4 @@
-name: 同契魔术-仿造恶魔
+name: 同契魔术
 text: |-
-  这个卡名的卡1回合只能发动1张。①：这个回合，双方不能特殊召唤与自身场上的怪兽相同种类（仪式·融合·同调·多维·链接）的怪兽。自己场上的仪式、融合、同调、多维、链接怪兽的任意种都没有2只以上存在的场合，自己场上的全部仪式、融合、同调、多维、链接怪兽的攻击力上升500。
+  这个卡名的卡在1回合只能发动1张。
+  ①：这个回合，双方不能把和自身场上的怪兽相同种类（仪式·融合·同调·超量·连接）的怪兽特殊召唤。自己场上是仪式·融合·同调·超量·连接怪兽的其中每种都没有2只以上存在的场合，自己场上的全部仪式·融合·同调·超量·连接怪兽的攻击力上升500。
