--- a/zh-CN/94670654.yaml
+++ b/zh-CN/94670654.yaml
@@ -1,3 +1,5 @@
-name: 兽之忍者-獏
+name: 兽之忍者-貘
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：这张卡用抽卡以外的方法加入手牌的场合可以发动。将这张卡特殊召唤。②：这张卡特殊召唤或翻转的场合，可以从自己的墓地以及自己的魔法陷阱区的表侧表示的卡之中，以1张「獣の忍者－獏／兽之忍者-獏」以外的「忍者」卡或者「忍法」卡为对象发动。使那张卡返回持有者的手牌。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：这张卡用抽卡以外的方法加入手卡的场合才能发动。这张卡特殊召唤。
+  ②：这张卡特殊召唤·反转的场合，从自己墓地以及自己的魔法与陷阱区域的表侧表示的卡之中以「兽之忍者-貘」以外的1张「忍者」卡或者「忍法」卡为对象才能发动。那张卡回到持有者手卡。
