Scrape partition 10, size 1000 (validation),

--- a/zh-CN/10602628.yaml
+++ b/zh-CN/10602628.yaml
@@ -1,4 +1,6 @@
-name: BF-魔风之玻瑞阿斯
+name: 黑羽-魔风之玻瑞阿斯
 text: |-
-  暗属性调整+1只以上调整以外的怪兽
-  这个卡名的①②效果1回合各能使用1次。①：这张卡同调召唤成功的场合可以发动。从卡组将1只「BF」怪兽送入墓地。这张卡的等级变为与那只怪兽的等级相同。②：这张卡用战斗将怪兽破坏并送入墓地时，可以从自己的墓地以及自己场上的表侧表示怪兽之中将1只「BF」怪兽除外发动。将那只被破坏的怪兽以守备表示特殊召唤到自己的场上。
+  暗属性调整＋调整以外的怪兽1只以上
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：这张卡同调召唤成功的场合才能发动。从卡组把1只「黑羽」怪兽送去墓地。这张卡的等级变成和那只怪兽的等级相同。
+  ②：这张卡战斗破坏怪兽送去墓地时，从自己墓地以及自己场上的表侧表示怪兽之中把1只「黑羽」怪兽除外才能发动。那只破坏的怪兽在自己场上守备表示特殊召唤。
