--- a/zh-CN/12061457.yaml
+++ b/zh-CN/12061457.yaml
@@ -1,3 +1,5 @@
 name: 灵魂剪刀
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：这张卡在墓地存在的状态下，场上的怪兽被战斗或效果破坏并送入墓地的场合可以发动。将这张卡特殊召唤。用这个效果特殊召唤的这张卡从场上离开的场合除外。②：这张卡从墓地的特殊召唤成功的场合，可以以对手场上的1只怪兽为对象发动。将那只怪兽破坏。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：这张卡在墓地存在的状态，场上的怪兽被战斗·效果破坏送去墓地的场合才能发动。这张卡特殊召唤。这个效果特殊召唤的这张卡从场上离开的场合除外。
+  ②：这张卡从墓地的特殊召唤成功的场合，以对方场上1只怪兽为对象才能发动。那只怪兽破坏。
