--- a/zh-CN/37495766.yaml
+++ b/zh-CN/37495766.yaml
@@ -1,3 +1,6 @@
-name: 救援王牌 涡轮湍流救火战车
+name: 救援ACE队 涡轮湍流消防战车
 text: |-
-  这个卡名的①②③效果1回合各能使用1次。①：可以从自己的墓地将2张「R－ACE／救援王牌」卡除外发动。将这张卡从手牌特殊召唤。②：自己的主要阶段可以发动。从卡组选最多4张「R－ACE／救援王牌」速攻魔法或通常陷阱卡盖放到自己的场上（同名卡最多1张）。③：自己场上的其他的卡因对手的效果从场上离开的场合，可以以场上的1张卡为对象发动。将那张卡破坏。
+  这个卡名的①②③的效果1回合各能使用1次。
+  ①：从自己墓地把2张「救援ACE队」卡除外才能发动。这张卡从手卡特殊召唤。
+  ②：自己主要阶段才能发动。从卡组选最多4张「救援ACE队」速攻魔法·通常陷阱卡在自己场上盖放（同名卡最多1张）。
+  ③：自己场上的其他卡因对方的效果从场上离开的场合，以场上1张卡为对象才能发动。那张卡破坏。
