--- a/zh-CN/45935145.yaml
+++ b/zh-CN/45935145.yaml
@@ -1,6 +1,8 @@
-name: 死祖之隶龙 沃罗
+name: 死祖之隶龙 沃洛
 text: |-
-  等级6怪兽×2只以上
-  这个卡名的②效果1回合只能使用1次。①：自己场上的怪兽的攻击力、守备力上升对手的墓地的卡的数量×100。②：可以以对手墓地的1张卡为对象，将这张卡的多维素材按照以下的数量取除，将那个效果发动。这个效果在对手的回合也能发动。
-  ●1个：使那张卡返回卡组。
-  ●2个：那张卡是怪兽的场合，以表侧表示或者里侧守备表示特殊召唤到自己的场上。是那以外的场合，盖放到自己的场上。
+  6星怪兽×2只以上
+  这个卡名的②的效果1回合只能使用1次。
+  ①：自己场上的怪兽的攻击力·守备力上升对方墓地的卡数量×100。
+  ②：可以以对方墓地1张卡为对象，把这张卡的超量素材的以下数量取除，那个效果发动。这个效果在对方回合也能发动。
+  ●1个：那张卡回到卡组。
+  ●2个：那张卡是怪兽的场合，在自己场上表侧表示或者里侧守备表示特殊召唤。那以外的场合，在自己场上盖放。
