--- a/zh-CN/68038375.yaml
+++ b/zh-CN/68038375.yaml
@@ -1,3 +1,5 @@
 name: 忍法 落叶舞
 text: |-
-  这个卡名的①②效果1回合只能有1次使用其中任意1个。①：可以以自己或对手场上的1只「忍者」怪兽或者里侧守备表示怪兽为对象才可以发动这张卡。将那只怪兽解放，从卡组特殊召唤1只「忍者」怪兽。这张卡从场上离开时那只怪兽送入墓地。②：这张卡以表侧表示存在的场合，可以以自己的魔法陷阱区的1张「忍法」永续魔法或永续陷阱卡为对象发动。使那张卡返回持有者的手牌。
+  这个卡名的①②的效果1回合只能有1次使用其中任意1个。
+  ①：以自己·对方场上1只「忍者」怪兽或者里侧守备表示怪兽为对象才能把这张卡发动。那只怪兽解放，从卡组把1只「忍者」怪兽特殊召唤。这张卡从场上离开时那只怪兽送去墓地。
+  ②：这张卡表侧表示存在的场合，以自己的魔法与陷阱区域1张「忍法」永续魔法·永续陷阱卡为对象才能发动。那张卡回到持有者手卡。
