--- a/zh-CN/84330567.yaml
+++ b/zh-CN/84330567.yaml
@@ -1,4 +1,7 @@
-name: 哀泪姬 鲁莎卡人鱼
+name: 珠泪哀歌族·鲁莎卡人鱼
 text: |-
-  「ティアラメンツ・キトカロス／哀泪姬 水仙人鱼」+「ティアラメンツ／哀泪姬」怪兽
-  这个卡名的②③效果1回合各能使用1次。①：这张卡以外的自己的水族怪兽不会被战斗破坏。②：包含将怪兽特殊召唤的效果由对手发动时可以发动。使其发动无效并破坏。那之后，从手牌以及自己场上的表侧表示的卡之中，选1张「ティアラメンツ／哀泪姬」卡送入墓地。③：融合召唤的这张卡被效果送入墓地的场合可以发动。将这张卡特殊召唤。
+  「珠泪哀歌族·水仙女人鱼」＋「珠泪哀歌族」怪兽
+  这个卡名的②③的效果1回合各能使用1次。
+  ①：这张卡以外的自己的水族怪兽不会被战斗破坏。
+  ②：包含把怪兽特殊召唤效果的效果由对方发动时才能发动。那个发动无效并破坏。那之后，从手卡以及自己场上的表侧表示的卡之中选1张「珠泪哀歌族」卡送去墓地。
+  ③：融合召唤的这张卡被效果送去墓地的场合才能发动。这张卡特殊召唤。
