--- a/zh-CN/95515789.yaml
+++ b/zh-CN/95515789.yaml
@@ -1,3 +1,6 @@
 name: 赫之圣女 卡尔特西娅
 text: |-
-  这个卡名的①②③效果1回合各能使用1次。①：自己的场上或自己的墓地有「アルバスの落胤／阿尔巴斯之落胤」存在的场合可以发动。将这张卡从手牌特殊召唤。②：双方的主要阶段可以发动。从自己的手牌或场上，将等级8以上的融合怪兽卡规定的融合素材怪兽送入墓地，从额外卡组融合召唤那1只融合怪兽。③：这个回合有融合怪兽被送入自己的墓地的场合，结束阶段可以发动。将墓地的这张卡加入手牌。
+  这个卡名的①②③的效果1回合各能使用1次。
+  ①：自己的场上或者墓地有「阿不思的落胤」存在的场合才能发动。这张卡从手卡特殊召唤。
+  ②：双方的主要阶段才能发动。从自己的手卡·场上把8星以上的融合怪兽卡决定的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。
+  ③：这个回合有融合怪兽被送去自己墓地的场合，结束阶段才能发动。墓地的这张卡加入手卡。
