Scrape partition 11, size 1000 (validation),

--- a/zh-CN/60095092.yaml
+++ b/zh-CN/60095092.yaml
@@ -1,3 +1,5 @@
-name: 群豪唤醒-单独激活
+name: 群豪觉醒-单人激活
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：从卡组选1只「ヴァリアンツ／群豪」灵摆怪兽放置到自己的灵摆区。②：场地区有卡存在的场合，可以将墓地的这张卡除外，以自己的主要怪兽区的1只「ヴァリアンツ／群豪」怪兽为对象发动。将那只自己的怪兽的位置移动到其相邻的怪兽区。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：从卡组选1只「群豪」灵摆怪兽在自己的灵摆区域放置。
+  ②：场地区域有卡存在的场合，把墓地的这张卡除外，以自己的主要怪兽区域1只「群豪」怪兽为对象才能发动。那只自己怪兽的位置向那个相邻的怪兽区域移动。
