--- a/zh-CN/32756828.yaml
+++ b/zh-CN/32756828.yaml
@@ -1,3 +1,5 @@
 name: 烙印之兽
 text: |-
-  这个卡名的②效果1回合只能使用1次。①：1回合1次，自己的场上有「ビーステッド／深渊之兽」怪兽存在的场合，自己或对手的主要阶段，可以将自己场上的1只龙族怪兽解放，以对手场上的1张卡为对象发动。将那张卡破坏。②：自己或对手的结束阶段，可以以自己墓地的1张「烙印」永续魔法或永续陷阱卡为对象发动。将那张卡以表侧表示放置到自己的场上。
+  这个卡名的②的效果1回合只能使用1次。
+  ①：1回合1次，自己场上有「深渊之兽」怪兽存在的场合，自己·对方的主要阶段，把自己场上1只龙族怪兽解放，以对方场上1张卡为对象才能发动。那张卡破坏。
+  ②：自己·对方的结束阶段，以自己墓地1张「烙印」永续魔法·永续陷阱卡为对象才能发动。那张卡在自己场上表侧表示放置。
