--- a/zh-CN/34976176.yaml
+++ b/zh-CN/34976176.yaml
@@ -1,3 +1,4 @@
-name: BF-雪击之奇努克
+name: 黑羽-雪击之奇努克
 text: |-
-  这个卡名的效果1回合只能使用1次。①：可以将手牌或场上的这张卡送入墓地，以对手场上的1只表侧表示怪兽为对象发动。从额外卡组将1只「BF」同调怪兽或者 「ブラックフェザー・ドラゴン／黑羽龙」送入墓地，对象怪兽直到回合结束时，攻击力下降700且效果无效化。自己场上有暗属性同调怪兽存在的场合，这个效果在对手的回合也能发动。
+  这个卡名的效果1回合只能使用1次。
+  ①：把手卡·场上的这张卡送去墓地，以对方场上1只表侧表示怪兽为对象才能发动。从额外卡组把1只「黑羽」同调怪兽或者「黑羽龙」送去墓地，作为对象的怪兽直到回合结束时攻击力下降700，效果无效化。自己场上有暗属性同调怪兽存在的场合，这个效果在对方回合也能发动。
