--- a/zh-CN/46057733.yaml
+++ b/zh-CN/46057733.yaml
@@ -1,4 +1,6 @@
-name: 燐回之三弦猫
+name: 磷回之三弦猫
 text: |-
-  调整+1只以上调整以外的怪兽
-  这个卡名的①②效果1回合各能使用1次。①：对手的主要阶段可以发动。将包含这张卡的自己场上的怪兽作为素材来同调召唤。②：这张卡在墓地存在的场合，可以以这张卡以外的自己墓地的1只同调怪兽为对象发动。使那只怪兽返回额外卡组，将这张卡特殊召唤。用这个效果特殊召唤的这张卡从场上离开的场合除外。
+  调整＋调整以外的怪兽1只以上
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：对方主要阶段才能发动。用包含这张卡的自己场上的怪兽为素材作同调召唤。
+  ②：这张卡在墓地存在的场合，以这张卡以外的自己墓地1只同调怪兽为对象才能发动。那只怪兽回到额外卡组，这张卡特殊召唤。这个效果特殊召唤的这张卡从场上离开的场合除外。
