--- a/zh-CN/53270092.yaml
+++ b/zh-CN/53270092.yaml
@@ -1,5 +1,7 @@
 name: 弓道魂 范士
 text: |-
-  ①：这张卡召唤成功时可以发动。使自己的灵摆区的卡相同纵列的自己的卡全部返回持有者的手牌。那之后，可以从卡组将1只「キュウドウ魂 HAN－SHI／弓道魂 范士」以外的攻击力2400/守备力1000的怪兽加入手牌。②：这张卡召唤或翻转的回合的结束阶段必定发动。这张卡返回持有者的手牌。
-pendulum: |-
-  ①：场上有怪兽被灵摆召唤的场合必定发动。使这张卡返回持有者的手牌。
+  ←9 【灵摆】 9→
+  ①：场上有怪兽灵摆召唤的场合发动。这张卡回到持有者手卡。
+  【怪兽效果】
+  ①：这张卡召唤成功时才能发动。和自己的灵摆区域的卡相同纵列的自己的卡全部回到持有者手卡。那之后，可以从卡组把「弓道魂 范士」以外的1只攻击力2400/守备力1000的怪兽加入手卡。
+  ②：这张卡召唤·反转的回合的结束阶段发动。这张卡回到持有者手卡。
