--- a/zh-CN/7602800.yaml
+++ b/zh-CN/7602800.yaml
@@ -1,3 +1,4 @@
-name: 黑羽旋风
+name: 黑羽之旋风
 text: |-
-  ①：1回合1次，自己从额外卡组特殊召唤暗属性同调怪兽的场合，可以从自己墓地的怪兽以及除外中的自己的怪兽之中，以1只比那只特殊召唤的怪兽攻击力低的、「BF」怪兽或者 「ブラックフェザー・ドラゴン／黑羽龙」为对象发动。将那只怪兽特殊召唤。②：1回合1次，自己场上的暗属性怪兽要被战斗或效果破坏的场合，可以将自己场上的1个黑羽指示物取除作为代替。
+  ①：1回合1次，自己从额外卡组把暗属性同调怪兽特殊召唤的场合，从自己墓地的怪兽以及除外的自己怪兽之中以比那只特殊召唤的怪兽攻击力低的1只「黑羽」怪兽或者「黑羽龙」为对象才能发动。那只怪兽特殊召唤。
+  ②：1回合1次，自己场上的暗属性怪兽被战斗·效果破坏的场合，可以作为代替把自己场上1个黑羽指示物取除。
