--- a/zh-CN/91222209.yaml
+++ b/zh-CN/91222209.yaml
@@ -1,3 +1,5 @@
-name: 救援王牌 双脉冲炮灭火员
+name: 救援ACE队 双脉冲炮灭火员
 text: |-
-  这个卡名的①②效果1回合各能使用1次。①：这张卡召唤或特殊召唤成功的场合可以发动。从卡组将1张「R－ACE／救援王牌」陷阱卡加入手牌。②：对手场上的怪兽的效果发动时，可以将手牌或场上的这张卡解放，以「R－ACEイントルーダー／救援王牌 双脉冲炮灭火员」以外的自己墓地的1只「R－ACE／救援王牌」怪兽为对象发动。将那只怪兽特殊召唤。
+  这个卡名的①②的效果1回合各能使用1次。
+  ①：这张卡召唤·特殊召唤成功的场合才能发动。从卡组把1张「救援ACE队」陷阱卡加入手卡。
+  ②：对方把场上的怪兽的效果发动时，把手卡·场上的这张卡解放，以「救援ACE队 双脉冲炮灭火员」以外的自己墓地1只「救援ACE队」怪兽为对象才能发动。那只怪兽特殊召唤。
